# guayacanes

./: Makefile  README.md  conftest.py  pyproject.toml
apps/accounts/: permissions.py  roles.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0002_create_staff_groups.py
apps/core/: admin.py  providers.py  registry.py  urls.py
apps/core/fixtures/: aspects.json  sections.json  services.json
apps/core/migrations/: 0001_initial.py
apps/core/models/: __init__.py  catalog.py  section.py
apps/core/tests/: test_neighborhoods.py
apps/geodata/: admin.py  apps.py
apps/geodata/migrations/: 0001_initial.py
apps/geodata/models/: __init__.py  public_space.py
apps/infra_servicios_publicos_urbaser/: admin.py  apps.py  receivers.py  registry.py  serializers.py  sla_handlers.py  urls.py  views.py
apps/infra_servicios_publicos_urbaser/fixtures/: aspect_content.json  aspects.json  service_content.json  services.json
apps/infra_servicios_publicos_urbaser/migrations/: 0001_initial.py
apps/infra_servicios_publicos_urbaser/models/: __init__.py  catalog.py  contenido.py  operaciones.py
apps/infra_servicios_publicos_urbaser/tests/: test_sla_handlers.py
apps/veeduria/: admin.py  apps.py  metrics.py  serializers.py  signals.py  statistics.py  transitions.py  urls.py  views.py
apps/veeduria/migrations/: 0001_initial.py  0002_add_address.py  (+4 more)
config/: urls.py
config/settings/: base.py
docs/api/: README.md
docs/refactor/: ARQUITECTURA-V2.md  EVENTS.md  MAPA-MODELOS.md  PLAN-MIGRACION.md  REGISTRY-PATTERN.md  SECTION-REGISTRY.md
(+13 files in other folders)
